# MachineLearning-1

./: .averaged_matrix.csv.swp  .gitignore  CMakeLists.txt  analys.txt  average.py  curr_working.r  plot.py  plot_m.py  working_10.r
Assignment_1/: figure_1.ps  figure_1.ps_tex  in_vs_out.r  plot.py  report.aux  report.bcf  report.tex
Assignment_1/bash_scripts/: params.sh
Assignment_1/figures/: L_q.ps  L_q.ps_tex  alpha.ps  alpha.ps_tex  beta.ps  beta.ps_tex  task2i.ps  task2i.ps_tex
Assignment_1/task1i/: plot.py  task1a.R
Assignment_1/task1ii/: plot.py  task1b.R
Assignment_1/task2i/: lib.r  plot.py  plot_lines.py  safe.r  task2i.r
Assignment_1/task2ii/: last.r  plot.py
Assignment_2/: .Rhistory  assignment2.r  eigenfaces.r  p_task2.py  plot.py  plotBestModel.py  plotTask1i.py  plot_cv.py  regularization.r  report.aux  report.run.xml  report.tex  task2.r  task3.r
Assignment_2/Faces/: .Rhistory  401.pgm
Assignment_2/figures/: best.ps  best.ps_tex  cv.ps  cv.ps_tex  expected.ps  expected.ps_tex  sin_y.ps  sin_y.ps_tex  task1i.ps  task1i.ps_tex  task1ii.ps  task1ii.ps_tex  task2i.ps  task2i.ps_tex
Project/: .Rhistory  boosting.r  cnn.r  image_preprocessing.r  linear_regression.R  nn.r  nn_v2.r  plot.py  project.R  randomForest.r  report.aux  report.tex  svm.r  svm_kaggle.R
Project/bash_scripts/: connect.sh  (+4 more)
bash_scripts/: .Rhistory  HT-Table11-P1-randomised.csv  connect.sh  connect_with_screen.sh  fail_grid.csv  gmon.out  login.sh.pub  params.sh  send.sh  strip_pack.r
include/: Legendre.h  LegendreFitting.hpp
src/: CMakeLists.txt  LegendreFitting.cpp
(+26 files in other folders)
